<resources>
    <string name="app_name">Movies App</string>

    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="watch_list">Watch List</string>

    <string name="upComing_movies">Upcoming Movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>

    <string name="continu">Continue</string>
    <string name="something_Went_wrong">Something went wrong!!</string>
    <string name="internet_is_not_available">Internet is not available!!</string>
    <string name="see_all">See All</string>
    <string name="no_record_found">No Record Found</string>
    <string name="coming_soon">Coming Soon..</string>


</resources>