<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_background_color"
        tools:context=".screens.dashboard.fragment.DashboardFragment">

        <LinearLayout
            android:id="@+id/ll_Top_Container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/background_home_top_card"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="22dp"
            app:layout_constraintBottom_toTopOf="@id/llMain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMain"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/background_main_content"
            android:orientation="vertical"
            android:paddingHorizontal="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.90"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_Top_Container">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/upComing_movies"
                            android:textColor="@color/black_text_color"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_Bannner_See_All"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:paddingHorizontal="20dp"
                            android:text="@string/see_all"
                            android:textColor="@color/dark_sky_blue_color"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <com.smarteist.autoimageslider.SliderView
                        android:id="@+id/top_Banner_Slider"
                        android:layout_width="match_parent"
                        android:layout_height="260dp"
                        app:sliderAnimationDuration="800"
                        app:sliderAutoCycleDirection="right"
                        app:sliderAutoCycleEnabled="true"
                        app:sliderIndicatorAnimationDuration="600"
                        app:sliderIndicatorGravity="center|bottom"
                        app:sliderIndicatorMargin="15dp"
                        app:sliderIndicatorOrientation="horizontal"
                        app:sliderIndicatorPadding="3dp"
                        app:sliderIndicatorRadius="2dp"
                        app:sliderIndicatorSelectedColor="@color/sliderSelectIndicatorColor"
                        app:sliderIndicatorUnselectedColor="@color/sliderUnSelectIndicatorColor"
                        app:sliderScrollTimeInSec="1"
                        app:sliderStartAutoCycle="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/popular_movies"
                        android:textColor="@color/black_text_color"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rec_View_Popular_Movies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:layoutAnimation="@anim/layout_animation"
                        android:paddingVertical="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/top_rated_movies"
                        android:textColor="@color/black_text_color"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rec_View_Top_Rated_Movies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:layoutAnimation="@anim/layout_animation"
                        android:paddingVertical="5dp" />


                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.core.widget.NestedScrollView>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>